projects/org.eclipse.epsilon.hutn.engine/src/org/eclipse/epsilon/hutn/parse/HutnParser.java
// $ANTLR 3.1b1 Hutn.g 2020-06-06 01:10:57

package org.eclipse.epsilon.hutn.parse;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/*******************************************************************************
 * Copyright (c) 2008 The University of York.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 * 
 * Contributors:
 *     Louis Rose - initial API and implementation
 * -----------------------------------------------------------------------------
 * ANTLR 3 License
 * [The "BSD licence"]
 * Copyright (c) 2005-2008 Terence Parr
 * All rights reserved.
 *  
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions
 * are met:
 * 1. Redistributions of source code must retain the above copyright
 *    notice, this list of conditions and the following disclaimer.
 * 2. Redistributions in binary form must reproduce the above copyright
 *    notice, this list of conditions and the following disclaimer in the
 *    documentation and/or other materials provided with the distribution.
 * 3. The name of the author may not be used to endorse or promote products
 *   derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
 * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
 * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
 * IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
 * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
 * NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 ******************************************************************************/
public class HutnParser extends org.eclipse.epsilon.common.parse.EpsilonParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TRUE", "FALSE", "NULL", "ADJECTIVE", "CLS_LVL_ATTRIBUTE", "ASSOC_INSTANCE", "REFERENCE", "NAME", "TEXTUAL_VALUE", "LBRACKET", "RBRACKET", "ASSIGNMENT", "ADJECTIVE_PREFIX", "COMMA", "NUMERIC_VALUE", "ID_START_LETTER", "ID_LETTER", "ESC", "TEXT_LETTER", "DIGIT", "WS", "ML_COMMENT", "SL_COMMENT", "';'", "'.'"
    };
    public static final int CLS_LVL_ATTRIBUTE=8;
    public static final int TEXTUAL_VALUE=12;
    public static final int ASSOC_INSTANCE=9;
    public static final int ESC=21;
    public static final int REFERENCE=10;
    public static final int ASSIGNMENT=15;
    public static final int ADJECTIVE=7;
    public static final int WS=24;
    public static final int EOF=-1;
    public static final int COMMA=17;
    public static final int ID_START_LETTER=19;
    public static final int NULL=6;
    public static final int TRUE=4;
    public static final int LBRACKET=13;
    public static final int NUMERIC_VALUE=18;
    public static final int RBRACKET=14;
    public static final int TEXT_LETTER=22;
    public static final int ID_LETTER=20;
    public static final int DIGIT=23;
    public static final int NAME=11;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int ADJECTIVE_PREFIX=16;
    public static final int ML_COMMENT=25;
    public static final int SL_COMMENT=26;
    public static final int FALSE=5;

    // delegates
    // delegators


        public HutnParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public HutnParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return HutnParser.tokenNames; }
    public String getGrammarFileName() { return "Hutn.g"; }


    public static class document_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start document
    // Hutn.g:97:1: document : ( pkg )* EOF -> ( pkg )* ;
    public final HutnParser.document_return document() throws RecognitionException {
        HutnParser.document_return retval = new HutnParser.document_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        HutnParser.pkg_return pkg1 = null;


        CommonTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_pkg=new RewriteRuleSubtreeStream(adaptor,"rule pkg");
        try {
            // Hutn.g:97:9: ( ( pkg )* EOF -> ( pkg )* )
            // Hutn.g:97:11: ( pkg )* EOF
            {
            // Hutn.g:97:11: ( pkg )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NAME) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Hutn.g:0:0: pkg
            	    {
            	    pushFollow(FOLLOW_pkg_in_document124);
            	    pkg1=pkg();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_pkg.add(pkg1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_document127); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: pkg
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 97:20: -> ( pkg )*
            {
                // Hutn.g:97:23: ( pkg )*
                while ( stream_pkg.hasNext() ) {
                    adaptor.addChild(root_0, stream_pkg.nextTree());

                }
                stream_pkg.reset();

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end document

    public static class pkg_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start pkg
    // Hutn.g:99:1: pkg : NAME ( TEXTUAL_VALUE )? LBRACKET ( pkg_contents )* RBRACKET ;
    public final HutnParser.pkg_return pkg() throws RecognitionException {
        HutnParser.pkg_return retval = new HutnParser.pkg_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NAME3=null;
        Token TEXTUAL_VALUE4=null;
        Token LBRACKET5=null;
        Token RBRACKET7=null;
        HutnParser.pkg_contents_return pkg_contents6 = null;


        CommonTree NAME3_tree=null;
        CommonTree TEXTUAL_VALUE4_tree=null;
        CommonTree LBRACKET5_tree=null;
        CommonTree RBRACKET7_tree=null;

        try {
            // Hutn.g:99:4: ( NAME ( TEXTUAL_VALUE )? LBRACKET ( pkg_contents )* RBRACKET )
            // Hutn.g:99:6: NAME ( TEXTUAL_VALUE )? LBRACKET ( pkg_contents )* RBRACKET
            {
            root_0 = (CommonTree)adaptor.nil();

            NAME3=(Token)match(input,NAME,FOLLOW_NAME_in_pkg139); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NAME3_tree = (CommonTree)adaptor.create(NAME3);
            root_0 = (CommonTree)adaptor.becomeRoot(NAME3_tree, root_0);
            }
            // Hutn.g:99:12: ( TEXTUAL_VALUE )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==TEXTUAL_VALUE) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // Hutn.g:0:0: TEXTUAL_VALUE
                    {
                    TEXTUAL_VALUE4=(Token)match(input,TEXTUAL_VALUE,FOLLOW_TEXTUAL_VALUE_in_pkg142); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    TEXTUAL_VALUE4_tree = (CommonTree)adaptor.create(TEXTUAL_VALUE4);
                    adaptor.addChild(root_0, TEXTUAL_VALUE4_tree);
                    }

                    }
                    break;

            }

            LBRACKET5=(Token)match(input,LBRACKET,FOLLOW_LBRACKET_in_pkg145); if (state.failed) return retval;
            // Hutn.g:99:37: ( pkg_contents )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NAME||LA3_0==ADJECTIVE_PREFIX) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Hutn.g:0:0: pkg_contents
            	    {
            	    pushFollow(FOLLOW_pkg_contents_in_pkg148);
            	    pkg_contents6=pkg_contents();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, pkg_contents6.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            RBRACKET7=(Token)match(input,RBRACKET,FOLLOW_RBRACKET_in_pkg151); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end pkg

    public static class pkg_contents_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start pkg_contents
    // Hutn.g:101:1: pkg_contents : ( cls | cls_level_attribute | assoc_instance );
    public final HutnParser.pkg_contents_return pkg_contents() throws RecognitionException {
        HutnParser.pkg_contents_return retval = new HutnParser.pkg_contents_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        HutnParser.cls_return cls8 = null;

        HutnParser.cls_level_attribute_return cls_level_attribute9 = null;

        HutnParser.assoc_instance_return assoc_instance10 = null;



        try {
            // Hutn.g:101:13: ( cls | cls_level_attribute | assoc_instance )
            int alt4=3;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ADJECTIVE_PREFIX) ) {
                alt4=1;
            }
            else if ( (LA4_0==NAME) ) {
                switch ( input.LA(2) ) {
                case 28:
                    {
                    alt4=2;
                    }
                    break;
                case TEXTUAL_VALUE:
                    {
                    int LA4_4 = input.LA(3);

                    if ( (LA4_4==LBRACKET||LA4_4==27) ) {
                        alt4=1;
                    }
                    else if ( (LA4_4==NAME) ) {
                        alt4=3;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 4, input);

                        throw nvae;
                    }
                    }
                    break;
                case LBRACKET:
                    {
                    int LA4_5 = input.LA(3);

                    if ( (LA4_5==NAME) ) {
                        int LA4_7 = input.LA(4);

                        if ( (LA4_7==NAME||(LA4_7>=RBRACKET && LA4_7<=ADJECTIVE_PREFIX)) ) {
                            alt4=1;
                        }
                        else if ( (LA4_7==TEXTUAL_VALUE) ) {
                            alt4=3;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 7, input);

                            throw nvae;
                        }
                    }
                    else if ( (LA4_5==RBRACKET||LA4_5==ADJECTIVE_PREFIX) ) {
                        alt4=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 5, input);

                        throw nvae;
                    }
                    }
                    break;
                case NAME:
                case ADJECTIVE_PREFIX:
                case 27:
                    {
                    alt4=1;
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;
                }

            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // Hutn.g:101:15: cls
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cls_in_pkg_contents159);
                    cls8=cls();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, cls8.getTree());

                    }
                    break;
                case 2 :
                    // Hutn.g:101:21: cls_level_attribute
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cls_level_attribute_in_pkg_contents163);
                    cls_level_attribute9=cls_level_attribute();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, cls_level_attribute9.getTree());

                    }
                    break;
                case 3 :
                    // Hutn.g:101:43: assoc_instance
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_assoc_instance_in_pkg_contents167);
                    assoc_instance10=assoc_instance();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assoc_instance10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end pkg_contents

    public static class assoc_instance_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start assoc_instance
    // Hutn.g:103:1: assoc_instance : ( infix_assoc | assoc_block );
    public final HutnParser.assoc_instance_return assoc_instance() throws RecognitionException {
        HutnParser.assoc_instance_return retval = new HutnParser.assoc_instance_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        HutnParser.infix_assoc_return infix_assoc11 = null;

        HutnParser.assoc_block_return assoc_block12 = null;



        try {
            // Hutn.g:103:15: ( infix_assoc | assoc_block )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==NAME) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==TEXTUAL_VALUE) ) {
                    alt5=1;
                }
                else if ( (LA5_1==LBRACKET) ) {
                    alt5=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // Hutn.g:103:17: infix_assoc
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_infix_assoc_in_assoc_instance174);
                    infix_assoc11=infix_assoc();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, infix_assoc11.getTree());

                    }
                    break;
                case 2 :
                    // Hutn.g:103:31: assoc_block
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_assoc_block_in_assoc_instance178);
                    assoc_block12=assoc_block();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assoc_block12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end assoc_instance

    public static class infix_assoc_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start infix_assoc
    // Hutn.g:105:1: infix_assoc : ref NAME ref ';' -> ^( ASSOC_INSTANCE[$NAME.text] ref ref ) ;
    public final HutnParser.infix_assoc_return infix_assoc() throws RecognitionException {
        HutnParser.infix_assoc_return retval = new HutnParser.infix_assoc_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NAME14=null;
        Token char_literal16=null;
        HutnParser.ref_return ref13 = null;

        HutnParser.ref_return ref15 = null;


        CommonTree NAME14_tree=null;
        CommonTree char_literal16_tree=null;
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
        RewriteRuleSubtreeStream stream_ref=new RewriteRuleSubtreeStream(adaptor,"rule ref");
        try {
            // Hutn.g:106:7: ( ref NAME ref ';' -> ^( ASSOC_INSTANCE[$NAME.text] ref ref ) )
            // Hutn.g:106:11: ref NAME ref ';'
            {
            pushFollow(FOLLOW_ref_in_infix_assoc194);
            ref13=ref();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_ref.add(ref13.getTree());
            NAME14=(Token)match(input,NAME,FOLLOW_NAME_in_infix_assoc196); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NAME.add(NAME14);

            pushFollow(FOLLOW_ref_in_infix_assoc198);
            ref15=ref();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_ref.add(ref15.getTree());
            char_literal16=(Token)match(input,27,FOLLOW_27_in_infix_assoc200); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_27.add(char_literal16);



            // AST REWRITE
            // elements: ref, ref
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 106:28: -> ^( ASSOC_INSTANCE[$NAME.text] ref ref )
            {
                // Hutn.g:106:31: ^( ASSOC_INSTANCE[$NAME.text] ref ref )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ASSOC_INSTANCE, (NAME14!=null?NAME14.getText():null)), root_1);

                adaptor.addChild(root_1, stream_ref.nextTree());
                adaptor.addChild(root_1, stream_ref.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end infix_assoc

    public static class assoc_block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start assoc_block
    // Hutn.g:109:1: assoc_block : NAME LBRACKET ( assoc_contents )+ RBRACKET -> ^( ASSOC_INSTANCE[$NAME.text] ( assoc_contents )* ) ;
    public final HutnParser.assoc_block_return assoc_block() throws RecognitionException {
        HutnParser.assoc_block_return retval = new HutnParser.assoc_block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NAME17=null;
        Token LBRACKET18=null;
        Token RBRACKET20=null;
        HutnParser.assoc_contents_return assoc_contents19 = null;


        CommonTree NAME17_tree=null;
        CommonTree LBRACKET18_tree=null;
        CommonTree RBRACKET20_tree=null;
        RewriteRuleTokenStream stream_LBRACKET=new RewriteRuleTokenStream(adaptor,"token LBRACKET");
        RewriteRuleTokenStream stream_RBRACKET=new RewriteRuleTokenStream(adaptor,"token RBRACKET");
        RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
        RewriteRuleSubtreeStream stream_assoc_contents=new RewriteRuleSubtreeStream(adaptor,"rule assoc_contents");
        try {
            // Hutn.g:110:7: ( NAME LBRACKET ( assoc_contents )+ RBRACKET -> ^( ASSOC_INSTANCE[$NAME.text] ( assoc_contents )* ) )
            // Hutn.g:110:11: NAME LBRACKET ( assoc_contents )+ RBRACKET
            {
            NAME17=(Token)match(input,NAME,FOLLOW_NAME_in_assoc_block234); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NAME.add(NAME17);

            LBRACKET18=(Token)match(input,LBRACKET,FOLLOW_LBRACKET_in_assoc_block236); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LBRACKET.add(LBRACKET18);

            // Hutn.g:110:25: ( assoc_contents )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==NAME) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // Hutn.g:0:0: assoc_contents
            	    {
            	    pushFollow(FOLLOW_assoc_contents_in_assoc_block238);
            	    assoc_contents19=assoc_contents();

            	    state._fsp--;
            	    if (state.failed) return retval;
